[package]
name = "documentation"
version = "0.0.1"
edition = "2021"
authors = ["Pierre-Louis Dubois <pierrelouis.dubois@tutanota.com>"]
license ="MIT"
description = "Documentation of rock n rollup"
repository = "https://github.com/Pilou97/rock-n-rollup"
keywords = ["tezos", "macro", "kernel", "smart-rollup", "rollup"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"