[package]
name = "rock-n-rollup-macro"
version = "0.0.2"
edition = "2021"
authors = ["Pierre-Louis Dubois <pierrelouis.dubois@tutanota.com>"]
license ="MIT"
description = "Macros of the rock-n-rollup project"
repository = "https://github.com/Pilou97/rock-n-rollup"
keywords = ["tezos", "macro", "kernel", "smart-rollup", "rollup"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"]}
quote = "1.0"
tezos-smart-rollup-core = "0.2.0"