[package]
name = "rock-n-rollup"
version = "0.0.1"
edition = "2021"
authors = ["Pierre-Louis Dubois <pierrelouis.dubois@tutanota.com>"]
license ="MIT"
description = "Framework to ease the development of smart rollups on Tezos"
repository = "https://github.com/Pilou97/rock-n-rollup"
keywords = ["tezos", "macro", "kernel", "smart-rollup", "rollup"]

[features]
all = ["external", "internal", "logger", "hasher"]
external = []
internal = []
logger = []
magic-byte = []
database = []
hasher = []

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rock-n-rollup-macro = {path="../kernel-macro", version="0.0.1"}
bincode = "1.3.3"
serde = "1.0.159"
blake2 = "0.10.6"