[package]
name = "rock-n-rollup"
version = "0.0.5"
edition = "2021"
authors = ["Pierre-Louis Dubois <pierrelouis.dubois@tutanota.com>"]
license ="MIT"
description = "Framework to ease the development of smart rollups on Tezos"
repository = "https://github.com/Pilou97/rock-n-rollup"
keywords = ["tezos", "macro", "kernel", "smart-rollup", "rollup"]
homepage = "https://pilou97.github.io/rock-n-rollup/"
readme = "readme.md"
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rock-n-rollup-macro = {path="../kernel-macro", version="0.0.2"}
bincode = "1.3.3"
serde = {version = "1.0.159", features = ["derive"]}
blake2 = "0.10.6"
ed25519-compact = { version ="2.0", default-features = false }
base58 = "0.1.0"
sha2 = "0.9.5"
serde-json-wasm = "0.5.0"
hex = "0.4.3"
nom = "6.1"
tezos-smart-rollup-encoding = "0.1.0"
tezos_data_encoding = "0.4.4"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"